<resources>
    <string name="app_name">LyONGdsey</string>
    <string name="app_statement">Be your own ONG!</string>
    <string name="button_stakeholders">Add \n Stakeholder</string>
    <string name="button_add_project">Add \n project</string>

    <!-- Stakeholders strings -->
    <string name="stakeholder_title">Stakeholder form</string>
    <string name="stakeholder_subtitle">Please, add all the fields</string>
    <string name="stakeholder_full_name">Full name</string>
    <string name="stakeholder_email">Email</string>
    <string name="stakeholder_website">Website</string>
    <string name="stakeholder_project_names">Project names</string>
    <string name="stakeholder_projects">Projects funded</string>
    <string name="stakeholder_amount">Amount</string>
    <string name="stakeholder_submit">Submit</string>


    <!-- Projects strings -->
    <string name="projects_title">Project form</string>
    <string name="projects_subtitle">Please, add all the fields</string>
    <string name="projects_full_name">Name</string>
    <string name="projects_website">Website</string>
    <string name="projects_description">Description</string>
    <string name="projects_image_website">Image URL</string>
    <string name="projects_amount">Budget</string>
    <string name="projects_complete_date">Closing date</string>
    <string name="projects_submit">Submit</string>

    <!-- Dashboard strings -->
    <string name="dashboard_projects_funded">Number of funded projects:</string>
    <string name="dashboard_stakeholders">Number of stakeholders:</string>
    <string name="dashboard_money_raised">Total money raised:</string>
    <string name="dashboard_funds_per_projects">Average funds per project closed:</string>

    <!-- Error strings -->
    <string name="stakeholder_field_required">Please fill this field as it´s required</string>
    <string name="stakeholder_email_not_valid">Your email is not valid</string>
    <string name="stakeholder_web_not_valid">Your website is not valid</string>
    <string name="stakeholder_fields_not_valid">Something went wrong, please, recheck all the fields</string>
</resources>