<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_dashboard_background"
    tools:context=".ui.StakeholderActivity">

    <LinearLayout
        android:id="@+id/stakeholderLinearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="0dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="left"
            android:text="@string/stakeholder_title"
            android:textColor="@color/white"
            android:textSize="32sp" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/stakeholder_subtitle"
        android:textSize="18sp"
        android:fontFamily="@font/poppins"
        android:layout_marginVertical="12dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullNameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stakeholder_full_name"
        app:boxStrokeColor="@color/purple_200"
        app:errorIconDrawable="@null"
        android:paddingVertical="12dp"
        style="@style/TextInputLayout.OutlineBox.CustomFont"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textAutoComplete"
            android:colorAccent="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stakeholder_email"
        app:boxStrokeColor="@color/purple_200"
        app:errorIconDrawable="@null"
        android:paddingVertical="12dp"
        style="@style/TextInputLayout.OutlineBox.CustomFont"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:colorAccent="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/webInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stakeholder_website"
        app:boxStrokeColor="@color/purple_200"
        app:errorIconDrawable="@null"
        android:paddingVertical="12dp"
        style="@style/TextInputLayout.OutlineBox.CustomFont"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/webEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textWebEditText"
            android:colorAccent="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/projectsInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stakeholder_projects"
        app:boxStrokeColor="@color/purple_200"
        app:errorIconDrawable="@null"
        android:paddingVertical="12dp"
        style="@style/TextInputLayout.OutlineBox.CustomFont"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/projectsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="text"
            android:colorAccent="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stakeholder_amount"
        app:boxStrokeColor="@color/purple_200"
        app:errorIconDrawable="@null"
        android:paddingVertical="12dp"
        style="@style/TextInputLayout.OutlineBox.CustomFont"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="number"
            android:colorAccent="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addStakeholderButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_button_shape"
        android:text="@string/stakeholder_submit"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:elevation="30dp"
        app:cornerRadius="8dp"
        android:shadowRadius="120"
        android:padding="12dp"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@id/stakeholderLinearlayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>