<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_dashboard_background"
    tools:context=".ui.DashboardActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="42sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="0dp" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addStakeholderButton"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:background="@drawable/rounded_button_shape"
        android:text="@string/button_stakeholders"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        android:lines="2"
        android:elevation="30dp"
        app:cornerRadius="8dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="22dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addProjectButton"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:background="@drawable/rounded_button_shape"
        android:text="@string/button_add_project"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="12sp"
        android:lines="2"
        android:elevation="30dp"
        app:cornerRadius="8dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="22dp"  />


</RelativeLayout>